--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,132 +1,206 @@
 /* ESTILOS GENERALES */
-* { 
-    margin: 0; 
-    padding: 0; 
+* {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color:#000;
-    color: #fff;
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-    
+  background-color: #000;
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
 }
-html{
-    font-size: 15px;
+html {
+  font-size: 15px;
 }
 span.no_selection {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -ms-user-select:none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -ms-user-select: none;
 }
-img::selection{ 
-    background: rgba(0, 0, 0, 0); 
+img::selection {
+  background: rgba(0, 0, 0, 0);
 }
 
-.video{
-    width:55rem;
+.video {
+  width: 55rem;
 }
 #particles-js {
-	height: 100vh; 
-	width: 100vw;
-    position: fixed;
-    z-index: -100;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: -100;
 }
-h5::selection{
-    background: rgba(0, 0, 0, 0);
+h5::selection {
+  background: rgba(0, 0, 0, 0);
 }
 
-
-#contenedor{
-    width: 100%;
-    height: 100vh;
-    max-height: 100vh;
-    margin: 0 auto;
-    z-index: 99;
-    opacity: 1;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+#contenedor {
+  width: 100%;
+  height: 100vh;
+  max-height: 100vh;
+  margin: 0 auto;
+  z-index: 99;
+  opacity: 1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
-.imgs{
-    width: 30rem;
+.imgs {
+  width: 30rem;
 }
-.lgama{
-    width: 30rem;
-    margin: auto;
-    -webkit-transition: 0.7s ease 0.7s;
+.lgama {
+  width: 30rem;
+  margin: auto;
+  -webkit-transition: 0.7s ease 0.7s;
 }
-.lgama:hover{
-    cursor: pointer;
-    opacity: 0.7;
+.lgama:hover {
+  cursor: pointer;
+  opacity: 0.7;
 }
-.tgama{
-    width: 30rem;
-    margin: auto;
+.tgama {
+  width: 30rem;
+  margin: auto;
 }
-#thunder{
-    margin: auto;
-    position: absolute;
-    z-index: -200;
+#thunder {
+  margin: auto;
+  position: absolute;
+  z-index: -200;
 }
-#logo{
-    animation-name: zoom;
-    animation-duration: 1.1s;
-    animation-direction: alternate;
-    animation-iteration-count: infinite;
-    animation-delay: 1s;
+#logo {
+  animation-name: zoom;
+  animation-duration: 1.1s;
+  animation-direction: alternate;
+  animation-iteration-count: infinite;
+  animation-delay: 1s;
 }
 
 @keyframes zoom {
-        0%   {transform: scale(1.0, 1.0);}
-        100% {transform: scale(1.12, 1.12)}
+  0% {
+    transform: scale(1, 1);
+  }
+  100% {
+    transform: scale(1.12, 1.12);
+  }
 }
 
 .modal-content {
-    background-color: rgba(0,0,0,0.4);
-    border-color: rgba(255, 255, 255, .25);
-    box-shadow: 0 7px 18px rgba(0, 0, 0, 5);
+  background-color: rgba(0, 0, 0, 0.4);
+  border-color: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 7px 18px rgba(0, 0, 0, 5);
 }
-.logo-modal{
-    width: 9rem;
-    height: auto;
+.container-modal {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 0.2em;
+  align-items: stretch;
+  justify-items: stretch;
 }
-
-@media(max-width: 560px){
-    .video{
-        width: 22rem;
-    }
-    .imgs{
-        width: 17rem;
-    }
-    .lgama{
-        width: 17rem;
-    }
-    .tgama{
-        width: 17rem;
-    }
-    .logo-modal{
-        width: 5rem;
-    }
+.container-modal > div {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: inherit;
+  justify-content: center;
+  align-items: center;
 }
 
-@media(max-width: 830px){
-    .video{
-        width: 20rem;
-    }
-    .imgs{
-        width: 18rem;
-    }
-    .lgama{
-        width: 18rem;
-    }
-    .tgama{
-        width: 18rem;
-    }
-    .logo-modal{
-        width: 5rem;
-    }
+.logo-partners {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  align-items: center;
+  justify-items: center;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 5px;
+  width: 100%;
+  height: 19em;
+}
+
+.element-collapse {
+  margin: 0.1em;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+.card-body {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 21.5em;
+  display: flex;
+  flex-wrap: nowrap;
+  color: #eee;
+  font-size: 0.8em;
+}
+.link-icon {
+  color: #888;
+}
+
+.img-logo {
+  width: 7em;
+  height: auto;
+  margin-bottom: 0.5em;
+}
+.text-partner {
+  font-size: 0.85em;
+}
+
+a:link {
+  color: #eee;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #eee;
+}
+
+a:hover {
+  color: #888;
+  text-decoration: underline;
+}
+
+@media (max-width: 560px) {
+  .video {
+    width: 22rem;
+  }
+  .imgs {
+    width: 17rem;
+  }
+  .lgama {
+    width: 17rem;
+  }
+  .tgama {
+    width: 17rem;
+  }
+  .container-modal {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0.5em;
+  }
+  .logo-partners img {
+    width: 7rem;
+  }
+}
+
+@media (max-width: 830px) {
+  .video {
+    width: 20rem;
+  }
+  .imgs {
+    width: 18rem;
+  }
+  .lgama {
+    width: 18rem;
+  }
+  .tgama {
+    width: 18rem;
+  }
+  .container-modal {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 0.5em;
+  }
+  .logo-partners img {
+    width: 7rem;
+  }
 }
