--- a/css/estilos.css
+++ b/css/estilos.css
@@ -88,8 +88,8 @@ h5::selection {
 }
 
 .modal-content {
-  background-color: rgba(0, 0, 0, 0.4);
-  border-color: rgba(255, 255, 255, 0.25);
+  background-color: rgba(0, 0, 0, 0.5);
+  border-color: rgba(255, 255, 255, 0.1);
   box-shadow: 0 7px 18px rgba(0, 0, 0, 5);
 }
 .container-modal {
@@ -112,37 +112,50 @@ h5::selection {
   grid-template-columns: repeat(1, 1fr);
   align-items: center;
   justify-items: center;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.08);
+  border-radius: 4px;
   width: 100%;
-  height: 19em;
+  height: 19.5em;
+}
+.collapse {
+  margin-top: 0px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+}
+.card {
+  margin-top: 0.8em;
+  padding-top: 0.8em;
+  margin-bottom: 0em;
+  padding-bottom: 0em;
 }
 
 .element-collapse {
-  margin: 0.1em;
+  margin: 0em;
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
+  flex-wrap: inherit;
 }
 .card-body {
-  background-color: rgba(0, 0, 0, 0.4);
-  width: 21.5em;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 22.3em;
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: inherit;
   color: #eee;
-  font-size: 0.8em;
+  font-size: 0.78em;
+  margin-top: 0;
 }
 .link-icon {
   color: #888;
 }
 
 .img-logo {
-  width: 7em;
+  width: 6.7em;
   height: auto;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.2em;
 }
 .text-partner {
-  font-size: 0.85em;
+  font-size: 0.8em;
 }
 
 a:link {
